@@ -4,3 +4,4 @@
 ./Mono.Rocks/IEnumerable.cs
 ./Mono.Rocks/Int32.cs
 ./Mono.Rocks/String.cs
+./Mono.Rocks/TextReader.cs
